--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Your website description here">
+    {% load static %}
+
     <title>MentorConnect - Find Your Mentor</title>
-    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Custom CSS -->
-    <link href="styles.css" rel="stylesheet">
+
 </head>
+
 <body class="bg-gray-100">
     <!-- Header with Navigation Bar -->
     <header class="bg-green-600 text-white py-4 relative">
@@ -18,19 +20,20 @@
             <!-- Hamburger Menu -->
             <button id="menuBtn" class="md:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-6 w-6 fill-current">
-                    <path fill-rule="evenodd" d="M4 6h16a1 1 0 110 2H4a1 1 0 110-2zm0 5h16a1 1 0 110 2H4a1 1 0 110-2zm0 5h16a1 1 0 110 2H4a1 1 0 110-2z"/>
+                    <path fill-rule="evenodd"
+                        d="M4 6h16a1 1 0 110 2H4a1 1 0 110-2zm0 5h16a1 1 0 110 2H4a1 1 0 110-2zm0 5h16a1 1 0 110 2H4a1 1 0 110-2z" />
                 </svg>
             </button>
             <!-- Navigation Links (Initially Hidden) -->
             <nav id="navLinks" class="hidden md:flex absolute top-full left-0 bg-white w-full py-2 px-4 shadow-md">
                 <a href="#" class="text-gray-800 hover:underline">Home</a>
 
-                {% if request.user.is_authenticated  %}
+                {% if request.user.is_authenticated %}
                 <a href={% url 'core:logout' %} class="text-gray-800 hover:underline ml-4">Logout</a>
                 {% else %}
                 <a href={% url 'core:login' %} class="text-gray-800 hover:underline ml-4">Login</a>
 
-                {% endif %} 
+                {% endif %}
 
                 <a href="#" class="text-gray-800 hover:underline ml-4">Settings</a>
             </nav>
@@ -47,16 +50,22 @@
             <!-- Mentor Card  -->
             <div class="bg-white rounded-lg shadow-md p-4">
                 <div class="details-container flex justify-start">
-                    <img width="56px" src="https://images.pexels.com/photos/3190334/pexels-photo-3190334.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Mentor 1" class="h-auto rounded-full mb-4">
+                    <img width="56px"
+                        src="https://images.pexels.com/photos/3190334/pexels-photo-3190334.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="Mentor 1" class="h-auto rounded-full mb-4">
                     <div class="details ml-2">
                         <h2 class="text-lg font-semibold mb-2">{{mentor.first_name}} {{mentor.last_name}}</h2>
                         <p class="text-gray-600 text-sm mb-4">@{{mentor.username}}</p>
                     </div>
                 </div>
-                <a href={% url 'core:videocall' username=mentor.username%}><button class="bg-green-600 text-white px-4 py-2 rounded-full hover:bg-green-700">Video Call</button></a>
-                <a href="#"><button class="border border-green-600 text-green-600 px-4 py-2 rounded-full ml-2 hover:bg-green-100">View Profile</button></a>
+                <a href={% url 'core:videocall' username=mentor.username%}><button
+                        class="bg-green-600 text-white px-4 py-2 rounded-full hover:bg-green-700">Video
+                        Call</button></a>
+                <a href="#"><button
+                        class="border border-green-600 text-green-600 px-4 py-2 rounded-full ml-2 hover:bg-green-100">View
+                        Profile</button></a>
             </div>
-{%endfor%}
+            {%endfor%}
         </div>
     </section>
 
@@ -68,11 +77,13 @@
     </footer>
 
     <!-- JavaScript for Hamburger Menu -->
+    <script src="{%static 'core/scripts/notificationSocket.js'%}"></script>
     <script>
-        document.getElementById('menuBtn').addEventListener('click', function() {
+        document.getElementById('menuBtn').addEventListener('click', function () {
             var nav = document.getElementById('navLinks');
             nav.classList.toggle('hidden');
         });
     </script>
 </body>
+
 </html>
